--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "private": true,
-  "name": "datamining",
+  "name": "datamining-worker",
   "version": "1.0.0",
-  "description": "Datamining webhook worker",
-  "main": "./src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "fmt": "prettier --write './src/*.{js,css,json,md}'"
+  "description": "A datamining service previously a cloudflare worker now migrated to vercel",
+  "main": "api/index.ts",
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arHSM/datamining-worker.git"
   },
-  "author": "arHSM <hanseungmin.ar@gmail.com>",
+  "keywords": [
+    "datamining",
+    "discord"
+  ],
+  "author": "한승민",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/arHSM/datamining-worker/issues"
+  },
+  "homepage": "https://github.com/arHSM/datamining-worker#readme",
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "@types/node": "^17.0.35",
+    "@vercel/node": "^1.15.3",
+    "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "cross-fetch": "^3.1.5",
+    "form-data": "^4.0.0"
   }
 }
