--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ serde = { version = "1.0.163", features = ["derive"] }
 rand = "0.8.5"
 regex = "1.8.4"
 once_cell = "1.18.0"
-reqwest = "0.11.18"
+reqwest = { version = "0.11.18", features = ["json"] }
+itertools = "0.10.5"
 
 [lib]
 path = "src-rs/lib.rs"
